--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/QuizzAppDB
 spring.datasource.username=spring_root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
+logging.level.org.springframework.security=trace
