--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>QuizzApp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>QuizzApp</name>
-	<description>Learning the spring framework on the example of quizz application </description>
+	<description>Learning the spring framework on the example of quiz application </description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
